magazine cross branch

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <header class="page-header">
     <nav>
       <ul class="list">
-        <li class="list-item item-second"><a href="#" class="link">PC</a></li>
-        <li class="list-item item-second"><a href="#" class="link">Laptope</a></li>
-        <li class="list-item item-second"><a href="#" class="link">Mobile</a>
+        <li class="list-item item-second"><a href="#" class="link">Eldorado</a></li>
+        <li class="list-item item-second"><a href="#" class="link">Foxtrot</a></li>
+        <li class="list-item item-second"><a href="#" class="link">Rozetka</a>
           <ul class="sub-list">
             <li class="sub-list-item">
               <a href="#" class="link">Iphone</a>
@@ -32,7 +32,7 @@
             </li>
           </ul>
         </li>
-        <li class="list-item item-second"><a href="#" class="link">Clock</a></li>
+        <li class="list-item item-second"><a href="#" class="link">Comfy</a></li>
       </ul>
     </nav>
   </header>
