--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="#" class="link">Motorala</a>
             </li>
             <li class="sub-list-item">
-              <a href="#" class="link">Unknow</a>
+              <a href="#" class="link">Plato</a>
             </li>
           </ul>
         </li>
