--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
           </ul>
         </li>
-        <li class="list-item item-second"><a href="#" class="link">Comfy</a></li>
+        <li class="list-item item-second"><a href="#" class="link">hello</a></li>
       </ul>
     </nav>
   </header>
